fixes print modal on mobile, social media buttons

--- a/client/src/styles/contact.css
+++ b/client/src/styles/contact.css
@@ -36,13 +36,13 @@
 .contact--social__flex a {
   padding: 0.75rem 1rem;
   border-radius: 25%;
-  transition: all 150ms ease-in-out;
-  box-shadow: 0 0 0 1px inset var(--dark);
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.4);
   background-color: var(--dark);
+  transition: all 150ms ease-in-out;
 }
 
 .contact--social__flex a:hover {
-  box-shadow: 0 0 0 1px inset var(--dark), 0 0 15px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.3);
 }
 
 .contact--social__flex a:focus {
